Dosage 1.7 (released xx.xx.2012)

Features:
- cmdline: Added proper return codes for error conditions.
- comics: Added more robust regular expressions for HTML tags.
  They match case insensitive and ignore whitespaces now.

Changes:
- installation: Added support for dynamic configuration values.
- comics: Removed the twisted and zope dependencies by adding
  an internal plugin search mechanism.
- testing: Refactored the test comic routine in proper unit tests.
- cmdline: Improved terminal feature detection.

Fixes:
- comics: Fix a lot of comics.
- comics: Don't add empty URLs to the list of found URLs.


Dosage v.1.6.0:
    * The "Not Dead Yet" release.
    * Added / Fixed / etc. comics:
        - Too many to list, really.
    * New dependencies:
        - Twisted
        - zope.interface (not zope)
    * Revamped plugin system, the first step on the road to Twisted.

Dosage v.1.5.8:
    * Added comics:
        - BonoboConspiracy
        - ChasingTheSunset
        - Comedity
        - GoneWithTheBlastwave
        - KeenSpot/* -- a *LOT* of KeenSpot submodules
        - NichtLustig
        - OtenbaFiles
        - Wulffmorgenthaler
        - Y
    * Fixed comics:
        - AbstractGender
        - AlienLovesPredator
        - AppleGeeks
        - EarthsongSaga
        - NewWorld
        - WhiteNinja
    * Moved comics:
        - KeenSpot/CatLegend (previously CatLegend)
        - All KeenSpot/* comic subnames no longer have "The" prefixes.
        - UClick (replaces UComics and UComicsEspanol)
    * Removed comics:
        - KeenSpot/TheDevilsPanties (duplicate of KeenSpot/DevilsPanties)

Dosage v.1.5.7:
    * Important SmackJeeves module fix. Catchup used to loop around from the
    first strip to the last one, thus potentially hammering the SmackJeeves
    servers with floods of requests from neverending catchups.
    * Added comics:
        - AbleAndBaker
        - AcademyVale
        - Aikida
        - Angels2200
        - BetterDays