@@ -17,5 +17,5 @@ thus making their individual implementations trivial.
 """
 import sys
 if not (hasattr(sys, 'version_info') or
-        sys.version_info < (2, 5, 0, 'final', 0)):
-    raise SystemExit("This program requires Python 2.5 or later.")
+        sys.version_info < (2, 7, 0, 'final', 0)):
+    raise SystemExit("This program requires Python 2.7 or later.")
